# ZWXCanTools

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
docs/: AI_OPERATION_GUIDE.md  GITHUB_PREP.md  PROJECT_STRUCTURE.md
resources/: resources.qrc
src/: ai_command_bridge.cpp  ai_command_bridge.h  can_device_backend.cpp  can_device_backend.h  device_controller.cpp  device_controller.h  main.cpp  main_window.cpp  main_window.h  uds_upgrade_manager.cpp  uds_upgrade_manager.h
